2013-06-03  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	index.php: Fix footer layout merged from 4.1

2013-05-31 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/include/style/main.css: fixed the list of modules in the
	main agent view.
	
	* mobile/operation/agent.php: improved the source code style.
	
	* mobile/operation/agents.php: fixed the PHP warnings.

2013-05-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Minor visual fix

2013-05-31 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: avoid to characters and
	other shit that corrupts the image file.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-05-30  Sergio Martin <sergio.martin@artica.es>

	* include/styles/menu.css
	include/styles/cluetip.css
	include/styles/pandora.css
	include/functions.php
	include/functions_events.php
	include/graphs/functions_gd.php
	include/functions_networkmap.php
	include/javascript/jquery.cluetip.js
	images/outof.png: Visual improvements

	* include/functions_treeview.php
	extensions/module_groups.php
	operation/tree.php
	operation/events/events.build_table.php
	operation/events/events_list.php
	operation/agentes/status_monitor.php : Add to the shared 
	views between normal and meta controls to access remote nodes
	for certain users

	* include/functions_visual_map.php
	include/functions_ui.php: Little bugfixes and improvements

2013-05-30 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php: fixed the string of button to
	refresh the networkmap.
	
	Fixes: #2254

2013-05-30 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/groups/group_list.php, include/functions_groups.php: fixed
	the link of to delete the group, now it have the correctly id_group.
	
	Fixes: #2253

2013-05-29 Miguel de Dios <miguel.dedios@artica.es>

	* operation/events/events.build_table.php,
	operation/agentes/estado_generalagente.php,