@@ -537,7 +537,7 @@ table#list_events th {
 #list_Modules .cell_5 a {
 	color: #000000 !important;
 }
-/*
+
 @media screen and (max-width: 35em) {
 	#list_Modules_Embedded .cell_1 .ui-table-cell-label,
 	#list_Modules_Embedded .cell_6 .ui-table-cell-label {
@@ -558,7 +558,7 @@ table#list_events th {
 	#list_Modules_Embedded .cell_1 .ui-table-cell-label,
 	#list_Modules_Embedded .cell_3 .ui-table-cell-label,
 	#list_Modules_Embedded .cell_4 .ui-table-cell-label {
-		display: none !important;
+		display: none;
 	}
 	
 	#list_Modules_Embedded .show_collapside {
@@ -569,11 +569,10 @@ table#list_events th {
 		white-space: nowrap;
 	}
 	
-	#list_Modules_Embedded .cell_2,
-	#list_Modules_Embedded .cell_1 {
+	#list_Modules_Embedded .cell_2 {
 		display: none !important;
 	}
-}*/
+}
 
 #list_Modules_Embedded .cell_4 a {
 	color: #000000 !important;
