@@ -95,7 +95,7 @@ if (count($agents) > 0) {
 	echo "<tr>";
 	echo "<th style='width: 26px;'>" . __("Force") . "</th>";
 	echo "<th style='width: 26px;'>" . __("Status") . "</th>";
-	echo "<th width='25%'>" . __("Group") . "</th>";
+	echo "<th width='30%'>" . __("Group") . "</th>";
 	echo "<th width='10%'>" . __("Agents") . "</th>";
 	echo "<th width='10%'>" . __("Agent unknown") . "</th>";
 	echo "<th width='10%'>" . __("Unknown") . "</th>";
@@ -103,7 +103,7 @@ if (count($agents) > 0) {
 	echo "<th width='10%'>" . __("Normal") . "</th>";
 	echo "<th width='10%'>" . __("Warning") . "</th>";
 	echo "<th width='10%'>" . __("Critical") . "</th>";
-	echo "<th width='10%' style='min-width: 100px'>" . __("Alert fired") . "</th>";
+	echo "<th width='10%'>" . __("Alert fired") . "</th>";
 	
 	$printed_groups = array();
 	
